syntax = "proto3";

option go_package = "./pb";

package pb;

message CreatePaymentReq {
  int64  user_id = 1; // user id
  string pay_model = 2; //
  int64  pay_total = 3; //（分）
  string order_sn = 4;
  string service_type = 5;
}

message CreatePaymentResp {
  string sn = 1; //流水记录单号
}

// payment service
service payment {
  // CreatePayment 创建微信支付预处理订单
  rpc CreatePayment(CreatePaymentReq) returns(CreatePaymentResp);
}
